open library api added

--- a/cart.html
+++ b/cart.html
@@ -187,11 +187,11 @@
     <!-- Loader -->
     <div id="preloader">
       <div id="loader">
-        <div class="book book-1"></div>
-        <div class="book book-2"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
+        <div class="bookloader bookloader-1"></div>
+        <div class="bookloader bookloader-2"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader bookloader-3"></div>
       </div>
     </div>
 
