--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <nav id="navbar">
         <div class="menu">
           <div>
-            <form>
+            <form class="search-form">
               <div class="input-wrap">
-                <input type="search" size="35" placeholder="Search" />
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <input id="input" size="45" placeholder="Search" />
+                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="menu-icon">
@@ -47,15 +47,6 @@
               <li>
                 <a href="profile.html"><i class="fa fa-user"></i></a>
               </li>
-            </ul>
-            <ul>
-              <li><a href="#">Fiction</a></li>
-              <li><a href="#">Best Seller</a></li>
-              <li><a href="#">Novel</a></li>
-              <li><a href="#">Collections</a></li>
-              <li><a href="#">New!</a></li>
-              <li><a href="#">Sale</a></li>
-              <li><a href="#">More</a></li>
             </ul>
             <ul class="social-media">
               <li>
@@ -73,10 +64,10 @@
         <div class="container">
           <a href="index.html" class="brand">BiblioTecha<span>BOOKS</span></a>
           <div class="container-inner">
-            <form>
+            <form class="search-form">
               <div class="input-wrap">
-                <input type="search" size="45" placeholder="Search" />
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <input id="input" size="45" placeholder="Search" />
+                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="page-icon">
@@ -96,18 +87,18 @@
           </div>
           <i class="fas fa-bars" id="menu-btn"></i>
         </div>
+        <div class="category-container">
+          <ul>
+            <li><a href="#fiction">Fiction</a></li>
+            <li><a href="#best-seller">Best Seller</a></li>
+            <li><a href="#novel">Novel</a></li>
+            <li><a href="#collections">Collections</a></li>
+            <li class="hide"><a href="#new">New!</a></li>
+            <li><a href="#sale">Sale</a></li>
+            <li class="hide"><a href="#more">More</a></li>
+          </ul>
+        </div>
       </nav>
-      <div class="category-container">
-        <ul>
-          <li><a href="#fiction">Fiction</a></li>
-          <li><a href="#best-seller">Best Seller</a></li>
-          <li><a href="#novel">Novel</a></li>
-          <li><a href="#collections">Collections</a></li>
-          <li><a href="#new">New!</a></li>
-          <li><a href="#sale">Sale</a></li>
-          <li><a href="#more">More</a></li>
-        </ul>
-      </div>
     </section>
     <section>
       <div id="tab1" class="tab-content active">
@@ -922,6 +913,14 @@
           </div>
         </section>
       </div>
+      <div id="search-tab" class="tab-content">
+        <section class="books">
+          <div class="books-heading">
+            <h2>RESULTS</h2>
+          </div>
+          <div id="output"></div>
+        </section>
+      </div>
     </section>
     <section class="additional-info">
       <div class="info-container">
@@ -1016,11 +1015,11 @@
     <!-- Loader -->
     <div id="preloader">
       <div id="loader">
-        <div class="book book-1"></div>
-        <div class="book book-2"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
+        <div class="bookloader bookloader-1"></div>
+        <div class="bookloader bookloader-2"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader book-3"></div>
       </div>
     </div>
 
