--- a/wishlist.html
+++ b/wishlist.html
@@ -184,14 +184,14 @@
     </section>
 
   
-    <!-- Loader -->
-    <div id="preloader">
+     <!-- Loader -->
+     <div id="preloader">
       <div id="loader">
-        <div class="book book-1"></div>
-        <div class="book book-2"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
-        <div class="book book-3"></div>
+        <div class="bookloader bookloader-1"></div>
+        <div class="bookloader bookloader-2"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader bookloader-3"></div>
+        <div class="bookloader bookloader-3"></div>
       </div>
     </div>
 
