--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <nav id="navbar">
         <div class="menu">
           <div>
-            <form class="search-form">
+            <form>
               <div class="input-wrap">
-                <input id="input" size="45" placeholder="Search" />
-                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
+                <input type="search" size="35" placeholder="Search" />
+                <button type="submit"><i class="fa fa-search"></i></button>
               </div>
             </form>
             <ul class="menu-icon">
