--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   Political Allegory.
                 </h1>
                 <p>With his seminal works, "1984" and "Animal Farm".</p>
-                <a href="#" class="header-btn">Read More</a>
+                <a href="featured.html" class="header-btn">Read More</a>
               </div>
               <div class="header-content2">
                 <h2>Featured Author</h2>
