--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div>
             <form class="search-form">
               <div class="input-wrap">
-                <input id="input" size="45" placeholder="Search" />
-                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
+                <input size="45" placeholder="Search" />
+                <a><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="menu-icon">
@@ -64,12 +64,12 @@
         <div class="container">
           <a href="index.html" class="brand">BiblioTecha<span>BOOKS</span></a>
           <div class="container-inner">
-            <form class="search-form">
+            <div class="search-form">
               <div class="input-wrap">
                 <input id="input" size="45" placeholder="Search" />
                 <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
-            </form>
+            </div>
             <ul class="page-icon">
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
@@ -112,7 +112,7 @@
                   Political Allegory.
                 </h1>
                 <p>With his seminal works, "1984" and "Animal Farm".</p>
-                <a href="featured.html" class="header-btn">Read More</a>
+                <a href="#" class="header-btn">Read More</a>
               </div>
               <div class="header-content2">
                 <h2>Featured Author</h2>
