--- a/cart.html
+++ b/cart.html
@@ -30,11 +30,14 @@
           <div>
             <form class="search-form">
               <div class="input-wrap">
-                <input id="input" size="45" placeholder="Search" />
-                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
+                <input size="45" placeholder="Search" />
+                <a><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="menu-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
@@ -64,13 +67,16 @@
         <div class="container">
           <a href="index.html" class="brand">BiblioTecha<span>BOOKS</span></a>
           <div class="container-inner">
-            <form class="search-form">
+            <div class="search-form">
               <div class="input-wrap">
                 <input id="input" size="45" placeholder="Search" />
                 <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
-            </form>
+            </div>
             <ul class="page-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
@@ -89,11 +95,16 @@
         </div>
       </nav>
     </section>
-    <section class="wishlist">
-      <div class="wishlist-content">
-        <div class="wishlist-text slide-from-top">
-          <h1>My Cart</h1>
-          <p>Your cart is empty. Find your next great read! <a href="index.html"><span>Go back to homepage and start browsing.</span></a></p>
+    <section class="cart">
+      <div class="container">
+        <div id="root"></div>
+        <div class="sidebar">
+          <div class="head"><p>MY CART</p></div>
+            <div id="cartItem"></div>
+            <div class="foot">
+              <h3>Total</h3>
+              <h2 id="total">$0.00</h2>
+            </div>
         </div>
       </div>
     </section>
