--- a/notif.html
+++ b/notif.html
@@ -30,11 +30,14 @@
           <div>
             <form class="search-form">
               <div class="input-wrap">
-                <input id="input" size="45" placeholder="Search" />
-                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
+                <input size="45" placeholder="Search" />
+                <a><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="menu-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
@@ -64,13 +67,16 @@
         <div class="container">
           <a href="index.html" class="brand">BiblioTecha<span>BOOKS</span></a>
           <div class="container-inner">
-            <form class="search-form">
+            <div class="search-form">
               <div class="input-wrap">
                 <input id="input" size="45" placeholder="Search" />
                 <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
-            </form>
+            </div>
             <ul class="page-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
@@ -86,6 +92,17 @@
             </ul>
           </div>
           <i class="fas fa-bars" id="menu-btn"></i>
+        </div>
+        <div class="category-container">
+          <ul>
+            <li><a href="#fiction">Fiction</a></li>
+            <li><a href="#best-seller">Best Seller</a></li>
+            <li><a href="#novel">Novel</a></li>
+            <li><a href="#collections">Collections</a></li>
+            <li class="hide"><a href="#new">New!</a></li>
+            <li><a href="#sale">Sale</a></li>
+            <li class="hide"><a href="#more">More</a></li>
+          </ul>
         </div>
       </nav>
     </section>
