--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </form>
             <ul class="menu-icon">
               <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
+              <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
               <li>
@@ -71,6 +74,9 @@
               </div>
             </div>
             <ul class="page-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
