--- a/wishlist.html
+++ b/wishlist.html
@@ -30,11 +30,14 @@
           <div>
             <form class="search-form">
               <div class="input-wrap">
-                <input id="input" size="45" placeholder="Search" />
-                <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
+                <input size="45" placeholder="Search" />
+                <a><i class="fa fa-search"></i></a>
               </div>
             </form>
             <ul class="menu-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
@@ -64,13 +67,16 @@
         <div class="container">
           <a href="index.html" class="brand">BiblioTecha<span>BOOKS</span></a>
           <div class="container-inner">
-            <form class="search-form">
+            <div class="search-form">
               <div class="input-wrap">
                 <input id="input" size="45" placeholder="Search" />
                 <a href="#search-tab" onclick="getbooks()"><i class="fa fa-search"></i></a>
               </div>
-            </form>
+            </div>
             <ul class="page-icon">
+              <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i></a>
+              </li>
               <li>
                 <a href="wishlist.html"><i class="fa fa-heart"></i></a>
               </li>
